--- a/OMV_file1.html
+++ b/OMV_file1.html
@@ -478,6 +478,55 @@ by COUNTY
 ##       ^
 </code></pre>
 
+<pre><code class="r">voter_or2 &lt;- voter_or %&gt;%
+  mutate(COUNTY = tolower(COUNTY))
+spatial2 &lt;- spatial %&gt;%
+  mutate(COUNTY = tolower(COUNTY))
+join &lt;- inner_join(voter_or2, spatial2, by = &quot;COUNTY&quot;)
+</code></pre>
+
+<pre><code class="r">voter_or %&gt;% count(COUNTY)
+</code></pre>
+
+<pre><code>## # A tibble: 37 × 2
+##       COUNTY      n
+##        &lt;chr&gt;  &lt;int&gt;
+## 1        ACP    130
+## 2      BAKER  13445
+## 3     BENTON  64437
+## 4  CLACKAMAS 310093
+## 5    CLATSOP  30670
+## 6   COLUMBIA  39100
+## 7       COOS  46452
+## 8      CROOK  17841
+## 9      CURRY  18004
+## 10 DESCHUTES 143677
+## # ... with 27 more rows
+</code></pre>
+
+<pre><code class="r">voter_or %&gt;% count(COUNTY, PARTY_CODE)
+</code></pre>
+
+<pre><code>## Source: local data frame [375 x 3]
+## Groups: COUNTY [?]
+## 
+##    COUNTY PARTY_CODE     n
+##     &lt;chr&gt;      &lt;chr&gt; &lt;int&gt;
+## 1     ACP        ACP   130
+## 2   BAKER        CON    39
+## 3   BAKER        DEM  2588
+## 4   BAKER        IND   697
+## 5   BAKER        LBT    86
+## 6   BAKER        NAV  3750
+## 7   BAKER        OTH    47
+## 8   BAKER        PGP    45
+## 9   BAKER        PRO     2
+## 10  BAKER        REP  6161
+## # ... with 365 more rows
+</code></pre>
+
+<p>What info is in the voter_all and voter_or files, what should I be looking at and how should I tidy? </p>
+
 </body>
 
 </html>
