--- a/OMV_file1.html
+++ b/OMV_file1.html
@@ -255,9 +255,11 @@ library(data.table)
 <pre><code>## Error in library(data.table): there is no package called &#39;data.table&#39;
 </code></pre>
 
-<p>Import and Bind </p>
+<p>Import and Bind Voter Data </p>
 
-<pre><code class="r">voterfull &lt;- read_tsv(&#39;https://www.dropbox.com/s/khywm89j8myn5t0/or_voter_history.zip?dl=0&#39;)
+<pre><code class="r">#This link attempts to make the data importable to anyone, however I can not get it to work 
+
+voterfull &lt;- read_tsv(&#39;https://www.dropbox.com/s/khywm89j8myn5t0/or_voter_history.zip?dl=0&#39;)
 </code></pre>
 
 <pre><code>## Parsed with column specification:
@@ -266,7 +268,9 @@ library(data.table)
 ## )
 </code></pre>
 
-<pre><code class="r">file.choose()
+<pre><code class="r">#These are the files with correct voting turnout data, however they are still missing registration type, I am not sure where to find that 
+
+file.choose()
 </code></pre>
 
 <pre><code>## Error in file.choose(): file choice cancelled
@@ -386,6 +390,8 @@ library(data.table)
 
 <pre><code class="r">votern_all &lt;- rbind(votern1, votern2, votern3, votern4, votern5)
 ---------
+#These are the voter files I downloaded from Pauls google drive, tho they do not seem to have all the information that I need. 
+
 voter1 &lt;- read_tsv(&quot;/Users/rosa/Documents/OMV project/data /CD1_VoterList_Jan2017.txt&quot;)
 </code></pre>
 
@@ -538,102 +544,141 @@ voter1 &lt;- read_tsv(&quot;/Users/rosa/Documents/OMV project/data /CD1_VoterLis
 <pre><code>## Error in head(voter_all): object &#39;voter_all&#39; not found
 </code></pre>
 
-<pre><code class="r">#file.choose()
-spatial &lt;- read_csv(&quot;/Users/rosa/Downloads/SPATIAL_INFO.csv&quot;)
+<p>Tidy Vote File </p>
+
+<pre><code class="r">#Here I select the columns I need. I would like to select the &quot;11/08/2016&quot; file but it will not let me, I think becuase the title is numeric. 
+votern_or &lt;- votern_all %&gt;%
+  select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY, CITY, BIRTH_DATE, STATUS, PARTY_CODE, RES_ADDRESS_1, PRECINCT_NAME, PRECINCT, ZIP_CODE)
+
+# Exluding 11/08/2016 
 </code></pre>
 
-<pre><code>## Warning: Missing column names filled in: &#39;X66&#39; [66], &#39;X67&#39; [67],
-## &#39;X68&#39; [68], &#39;X69&#39; [69], &#39;X70&#39; [70], &#39;X71&#39; [71], &#39;X72&#39; [72], &#39;X73&#39; [73],
-## &#39;X74&#39; [74], &#39;X75&#39; [75], &#39;X76&#39; [76], &#39;X77&#39; [77], &#39;X78&#39; [78], &#39;X79&#39; [79],
-## &#39;X80&#39; [80], &#39;X81&#39; [81], &#39;X82&#39; [82], &#39;X83&#39; [83], &#39;X84&#39; [84], &#39;X85&#39; [85],
-## &#39;X86&#39; [86], &#39;X87&#39; [87], &#39;X88&#39; [88], &#39;X89&#39; [89], &#39;X90&#39; [90], &#39;X91&#39; [91],
-## &#39;X92&#39; [92], &#39;X93&#39; [93], &#39;X94&#39; [94], &#39;X95&#39; [95]
+<p>Import Geographic Data</p>
+
+<pre><code class="r">#I first import Census tract data, then State Legislative district, then County. 
+#file.choose()
+census &lt;- read_csv(&quot;/Users/rosa/Desktop/SEcensus.csv&quot;)
 </code></pre>
 
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   .default = col_character(),
-##   X66 = col_integer(),
-##   X67 = col_integer(),
-##   X68 = col_integer(),
-##   X69 = col_double(),
-##   X70 = col_double(),
-##   X71 = col_double(),
-##   X72 = col_double(),
-##   X73 = col_double(),
-##   X74 = col_double(),
-##   X75 = col_double(),
-##   X76 = col_double(),
-##   X77 = col_double(),
-##   X78 = col_double(),
-##   X79 = col_double(),
-##   X80 = col_double(),
-##   X81 = col_integer(),
-##   X82 = col_integer(),
-##   X83 = col_integer(),
-##   X84 = col_integer(),
-##   X85 = col_integer()
-##   # ... with 10 more columns
+##   Geo_FIPS = col_double(),
+##   Geo_SUMLEV = col_integer(),
+##   Geo_STATE = col_integer(),
+##   SE_T004_001 = col_integer(),
+##   SE_T004_002 = col_integer(),
+##   SE_T004_003 = col_integer(),
+##   SE_T007_001 = col_integer(),
+##   SE_T007_002 = col_integer(),
+##   SE_T007_003 = col_integer(),
+##   SE_T007_004 = col_integer(),
+##   SE_T007_005 = col_integer(),
+##   SE_T007_006 = col_integer(),
+##   SE_T007_007 = col_integer(),
+##   SE_T007_008 = col_integer(),
+##   SE_T007_009 = col_integer(),
+##   SE_T007_010 = col_integer(),
+##   SE_T007_011 = col_integer(),
+##   SE_T007_012 = col_integer(),
+##   SE_T007_013 = col_integer(),
+##   SE_T013_001 = col_integer()
+##   # ... with 8 more columns
+## )
+</code></pre>
+
+<pre><code>## See spec(...) for full column specifications.
+</code></pre>
+
+<pre><code class="r">#file.choose()
+stateleg &lt;- read_csv(&quot;/Users/rosa/Desktop/SEstateleg.csv&quot;)
+</code></pre>
+
+<pre><code>## Parsed with column specification:
+## cols(
+##   .default = col_character(),
+##   Geo_FIPS = col_integer(),
+##   Geo_SUMLEV = col_integer(),
+##   Geo_STATE = col_integer(),
+##   SE_T004_001 = col_integer(),
+##   SE_T004_002 = col_integer(),
+##   SE_T004_003 = col_integer(),
+##   SE_T007_001 = col_integer(),
+##   SE_T007_002 = col_integer(),
+##   SE_T007_003 = col_integer(),
+##   SE_T007_004 = col_integer(),
+##   SE_T007_005 = col_integer(),
+##   SE_T007_006 = col_integer(),
+##   SE_T007_007 = col_integer(),
+##   SE_T007_008 = col_integer(),
+##   SE_T007_009 = col_integer(),
+##   SE_T007_010 = col_integer(),
+##   SE_T007_011 = col_integer(),
+##   SE_T007_012 = col_integer(),
+##   SE_T007_013 = col_integer(),
+##   SE_T013_001 = col_integer()
+##   # ... with 8 more columns
 ## )
 ## See spec(...) for full column specifications.
 </code></pre>
 
-<p>Tidy Vote FIle </p>
-
-<pre><code class="r">votern_or &lt;- votern_all %&gt;%
-  select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY, CITY, BIRTH_DATE, STATUS, PARTY_CODE, RES_ADDRESS_1, PRECINCT_NAME, PRECINCT, ZIP_CODE, 11/08/2016)
-
-         11/08/2016) 
-</code></pre>
-
-<pre><code>## Error: &lt;text&gt;:4:20: unexpected &#39;)&#39;
-## 3:          
-## 4:          11/08/2016)
-##                       ^
-</code></pre>
-
-<p>Import Geographic dta </p>
-
 <pre><code class="r">#file.choose()
-geo &lt;- read_csv(&quot;/Users/rosa/Desktop/socialexplorer-zipcode.csv&quot;)
-voter_geo &lt;- inner_join(voter_or, spatial) 
-by COUNTY
+county &lt;- read_csv(&quot;/Users/rosa/Desktop/SEcounty.csv&quot;)
 </code></pre>
 
-<pre><code>## Error: &lt;text&gt;:4:4: unexpected symbol
-## 3: voter_geo &lt;- inner_join(voter_or, spatial) 
-## 4: by COUNTY
-##       ^
+<pre><code>## Parsed with column specification:
+## cols(
+##   .default = col_character(),
+##   Geo_FIPS = col_integer(),
+##   Geo_SUMLEV = col_integer(),
+##   Geo_GEOCOMP = col_integer(),
+##   Geo_LOGRECNO = col_integer(),
+##   Geo_STATE = col_integer(),
+##   Geo_COUNTY = col_integer(),
+##   TotalPopSex = col_integer(),
+##   PopMale = col_integer(),
+##   PopFemale = col_integer(),
+##   TotalPopAge = col_integer(),
+##   PopFive = col_integer(),
+##   PopNine = col_integer(),
+##   PopFourteen = col_integer(),
+##   PopSeventeen = col_integer(),
+##   PopTwentyfour = col_integer(),
+##   PopThirtyfour = col_integer(),
+##   PopFortyfour = col_integer(),
+##   PopFiftyfour = col_integer(),
+##   PopSixtyfour = col_integer(),
+##   PopSeventyfour = col_integer()
+##   # ... with 11 more columns
+## )
+## See spec(...) for full column specifications.
 </code></pre>
 
-<pre><code class="r">voter_or2 &lt;- voter_or %&gt;%
+<p>Tidy Geographic Data </p>
+
+<pre><code class="r">#Here I would like to seperate the columns into ones with County and tract in seperate columns, but I am not sure how to do that. 
+
+#censust &lt;- census %&gt;%
+  #select(Geo_NAME, Geo_COUNTY)
+</code></pre>
+
+<p>County Join </p>
+
+<pre><code class="r">votern_all2 &lt;- votern_all %&gt;%
   mutate(COUNTY = tolower(COUNTY))
-</code></pre>
-
-<pre><code>## Error in eval(expr, envir, enclos): object &#39;voter_or&#39; not found
-</code></pre>
-
-<pre><code class="r">spatial2 &lt;- spatial %&gt;%
+county2 &lt;- county %&gt;%
   mutate(COUNTY = tolower(COUNTY))
-join &lt;- inner_join(voter_or2, spatial2, by = &quot;COUNTY&quot;)
+join &lt;- inner_join(votern_all2, county2, by = &quot;COUNTY&quot;)
+
+#voter_or %&gt;% count(COUNTY)
+#voter_or %&gt;% count(COUNTY, PARTY_CODE)
 </code></pre>
 
-<pre><code>## Error in inner_join(voter_or2, spatial2, by = &quot;COUNTY&quot;): object &#39;voter_or2&#39; not found
-</code></pre>
+<p>Visualize </p>
 
-<pre><code class="r">voter_or %&gt;% count(COUNTY)
+<pre><code class="r">#ggplot(join, aes(x= PopWhite))+
+#facet_grid(.~COUNTY)
 </code></pre>
-
-<pre><code>## Error in eval(expr, envir, enclos): object &#39;voter_or&#39; not found
-</code></pre>
-
-<pre><code class="r">voter_or %&gt;% count(COUNTY, PARTY_CODE)
-</code></pre>
-
-<pre><code>## Error in eval(expr, envir, enclos): object &#39;voter_or&#39; not found
-</code></pre>
-
-<p>What info is in the voter_all and voter_or files, what should I be looking at and how should I tidy? </p>
 
 </body>
 
