--- a/OMV_file1.html
+++ b/OMV_file1.html
@@ -494,8 +494,11 @@ sex &lt;- zipcode %&gt;%
 
 # Just Race
 
+zipcode$p_black &lt;- zipcode$black / zipcode$total_pop
+zipcode$p_white &lt;- zipcode$white / zipcode$total_pop
+
 race &lt;- zipcode %&gt;%
-  select(ZIP_CODE, total_pop, white, black, ai, asian, hawaiian, other, two)
+  select(ZIP_CODE, total_pop, white, black, ai, asian, hawaiian, other, two, p_black, p_white)
 </code></pre>
 
 <p>Get at zip code level for Oregon registered voters</p>
@@ -508,11 +511,19 @@ race &lt;- zipcode %&gt;%
 <pre><code>## Error in eval(expr, envir, enclos): object &#39;voter_or&#39; not found
 </code></pre>
 
-<p>Proportion of registered that voted on Nov 2016</p>
+<p>Proportion of registered that voted on Nov 2016 and Nov 2012 </p>
 
-<pre><code class="r">prop_voted16 &lt;- voter_or %&gt;%
+<pre><code class="r">prop_voted2016 &lt;- voter_or %&gt;%
   group_by(ZIP_CODE) %&gt;%
-  summarize(prop_voted = mean(`11/08/2016` == &quot;YES&quot;))
+  summarize(prop_v16 = mean(`11/08/2016` == &quot;YES&quot;))
+</code></pre>
+
+<pre><code>## Error in eval(expr, envir, enclos): object &#39;voter_or&#39; not found
+</code></pre>
+
+<pre><code class="r">prop_voted2012 &lt;- voter_or %&gt;%
+  group_by(ZIP_CODE) %&gt;%
+  summarize(prop_v12 = mean(`11/06/2012` == &quot;YES&quot;))
 </code></pre>
 
 <pre><code>## Error in eval(expr, envir, enclos): object &#39;voter_or&#39; not found
@@ -569,14 +580,22 @@ race &lt;- zipcode %&gt;%
 <p>Construct data sets with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted</p>
 
 <pre><code class="r">zipcode_data &lt;- inner_join(x = total_regs,
-                           y = prop_voted16,
+                           y = prop_voted2016,
                            by = &quot;ZIP_CODE&quot;)
 </code></pre>
 
-<pre><code>## Error in inner_join(x = total_regs, y = prop_voted16, by = &quot;ZIP_CODE&quot;): object &#39;total_regs&#39; not found
+<pre><code>## Error in inner_join(x = total_regs, y = prop_voted2016, by = &quot;ZIP_CODE&quot;): object &#39;total_regs&#39; not found
 </code></pre>
 
-<pre><code class="r">zipcode_datafull &lt;- inner_join(x = zipcode_data,
+<pre><code class="r">zipcode_data &lt;- inner_join(x = zipcode_data,
+                           y = prop_voted2012,
+                           by = &quot;ZIP_CODE&quot;)
+</code></pre>
+
+<pre><code>## Error in inner_join(x = zipcode_data, y = prop_voted2012, by = &quot;ZIP_CODE&quot;): object &#39;zipcode_data&#39; not found
+</code></pre>
+
+<pre><code class="r">zipcode_data &lt;- inner_join(x = zipcode_data,
                            y = prop_regcon,
                            by = &quot;ZIP_CODE&quot;)
 </code></pre>
@@ -585,61 +604,28 @@ race &lt;- zipcode %&gt;%
 </code></pre>
 
 <pre><code class="r"># Join sex with voter reg aggregated data
-sex_reg &lt;- inner_join(x = sex, y = zipcode_datafull, 
+sex_reg &lt;- inner_join(x = sex, y = zipcode_data, 
                       by = &quot;ZIP_CODE&quot;)
 </code></pre>
 
-<pre><code>## Error in is.data.frame(y): object &#39;zipcode_datafull&#39; not found
+<pre><code>## Error in is.data.frame(y): object &#39;zipcode_data&#39; not found
 </code></pre>
 
 <pre><code class="r"># Join race with voter reg aggregated data
-race_reg &lt;- inner_join(x = race, y = zipcode_datafull, 
+race_reg &lt;- inner_join(x = race, y = zipcode_data, 
                       by = &quot;ZIP_CODE&quot;)
 </code></pre>
 
-<pre><code>## Error in is.data.frame(y): object &#39;zipcode_datafull&#39; not found
+<pre><code>## Error in is.data.frame(y): object &#39;zipcode_data&#39; not found
 </code></pre>
 
 <pre><code class="r"># One set with both 
 
-both_reg &lt;- inner_join(x = race_reg, y = sex_reg, 
+county_reg &lt;- inner_join(x = race_reg, y = sex, 
                       by = &quot;ZIP_CODE&quot;)
 </code></pre>
 
-<pre><code>## Error in inner_join(x = race_reg, y = sex_reg, by = &quot;ZIP_CODE&quot;): object &#39;race_reg&#39; not found
-</code></pre>
-
-<pre><code class="r">both_reg2 &lt;- both_reg %&gt;% 
-  select(ZIP_CODE, total_pop.x, white, black, ai, asian, hawaiian, other, two, count.x, prop_voted.x, male, female, prop_reg.x)
-</code></pre>
-
-<pre><code>## Error in eval(expr, envir, enclos): object &#39;both_reg&#39; not found
-</code></pre>
-
-<p>Tidy Files for Analysis  </p>
-
-<pre><code class="r">race_reg2&lt;- race_reg %&gt;% 
-  gather(key=&quot;race&quot;, value = &quot;number&quot;, 3:9)
-</code></pre>
-
-<pre><code>## Error in eval(expr, envir, enclos): object &#39;race_reg&#39; not found
-</code></pre>
-
-<pre><code class="r">sex_reg2 &lt;- sex_reg %&gt;% 
-  gather(key=&quot;sex&quot;, value = &quot;number&quot;, 3:4)
-</code></pre>
-
-<pre><code>## Error in eval(expr, envir, enclos): object &#39;sex_reg&#39; not found
-</code></pre>
-
-<pre><code class="r">both_regtidy &lt;-inner_join(x = race_reg2, y = sex_reg2, 
-                      by = &quot;ZIP_CODE&quot;) 
-</code></pre>
-
-<pre><code>## Error in inner_join(x = race_reg2, y = sex_reg2, by = &quot;ZIP_CODE&quot;): object &#39;race_reg2&#39; not found
-</code></pre>
-
-<pre><code class="r">#what varriables do I need, Should I change how the Race and Sex columns are organized?  
+<pre><code>## Error in inner_join(x = race_reg, y = sex, by = &quot;ZIP_CODE&quot;): object &#39;race_reg&#39; not found
 </code></pre>
 
 <p>Analysis </p>
@@ -647,7 +633,16 @@ both_reg &lt;- inner_join(x = race_reg, y = sex_reg,
 <pre><code class="r">#I would like to have a percent black, and a percent white ect columns. Then the analysis I can do is- correlation between regisration through MV and percentage white. Percent vote and race.
 </code></pre>
 
-<pre><code>
+<p>Extra Code </p>
+
+<pre><code class="r">#race_reg2&lt;- race_reg %&gt;% 
+  #gather(key=&quot;race&quot;, value = &quot;number&quot;, 3:9)
+
+#sex_reg2 &lt;- sex_reg %&gt;% 
+ # gather(key=&quot;sex&quot;, value = &quot;number&quot;, 3:4)
+
+#both_regtidy &lt;-inner_join(x = race_reg2, y = sex_reg2, 
+                    #  by = &quot;ZIP_CODE&quot;) 
 </code></pre>
 
 </body>
